Fixed some Alabaster skin layout issues

--- a/htdocs/skins/Alabaster/Alabaster.css
+++ b/htdocs/skins/Alabaster/Alabaster.css
@@ -7,11 +7,12 @@ background-color:#f3f4ee;
 
 .cover-container {
 width:65%;
-height:100%;
+min-height:100%;
 margin:0 auto;
 background:url(bg-left.png);
 background-repeat:repeat-y;
 background-color:rgb(248, 250, 247);
+min-width:500px;
 }
 
 .cover-inner{
@@ -26,7 +27,7 @@ padding:4% 140px 5% 140px;
 }
 
 .cover-portrait{
-width:28%;
+width:160px;
 margin-right: 2rem;
 border:solid 1px #000;
 border-radius:6px;
@@ -39,12 +40,13 @@ font-size:3.2rem;
 
 .cover-subheading{
 display:block;
-font-size:1.7rem;
-opacity:0.5;
+font-size:50% !important;
+opacity:0.6;
 }
 
 .bio-name{
 display:flex;
+flex-wrap:wrap;
 align-items:center;
 }
 
@@ -86,14 +88,64 @@ A:active{
 color:#888;
 }
 
-@media screen and (min-width: 800px) and (max-width: 1150px) {
+.logo{
+float:right;
+width:90px;
+margin:0 0 0 13px;
+}
+
+.logo IMG{
+width:100%;
+}
+
+@media screen and (max-width: 400px) {
 	.cover-container {
-		width:75%;
+		padding:13px;
 	}
 }
 
-@media screen and (min-width: 100px) and (max-width: 800px) {
+/* SMALLSCREEN ----------------------------------------------------------------------- */
+@media screen and (max-width: 500px) {
 	.cover-container {
-		width:95%;
+		width:86%;
+	}
+	.cover-portrait{
+	}
+	.cover-heading{
+		font-size:1rem !important;
+	}
+}
+
+@media screen and (min-width: 501px) and (max-width: 800px) {
+	.cover-container {
+		width:76%;
+	}
+	.cover-portrait{
+	}
+	.cover-heading{
+		font-size:1.2rem !important;
+	}
+}
+
+
+@media screen and (min-width: 801px) and (max-width: 1150px) {
+	.cover-container {
+		width:70%;
+	}
+	.cover-portrait{
+	}
+	.cover-heading{
+		font-size:1.8rem !important;
+	}
+}
+
+@media screen and (min-width: 1150px) and (max-width: 9900px) {
+	.cover-container{
+		width:840px;
+	}
+	.cover-portrait{
+	}
+	.cover-heading{
+		font-size:1.8rem !important;
 	}
 }
